fixed distorted schedule for mde

--- a/_sass/custom-utils/accordion.sass
+++ b/_sass/custom-utils/accordion.sass
@@ -12,4 +12,4 @@
 .accordion-content
   max-height: 0
   overflow: hidden
-  transition: max-height 250ms ease-out
+  transition: max-height 300ms ease
